force-app/main/default/objects/Competitor_Opp__c/Competitor_Opp__c.object-meta.xml
<CustomObject>
    <label>Competitor Accounts</label>
    <nameField>
        <displayFormat>COM-{00000000}</displayFormat>
        <label>Competitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitor Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>