force-app/main/default/objects/Competitor_Opp__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Accounts (Account)</relationshipLabel>
    <relationshipName>Competitor_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>