force-app/main/default/objects/Competitor_Opp__c/fields/Competitor_Account__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competitor Accounts</relationshipLabel>
    <relationshipName>Competitor_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>