force-app/main/default/objects/Competitor_Opp__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Competitor Accounts</relationshipLabel>
    <relationshipName>Competitor_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>