force-app/main/default/objects/Competitor_Opp__c/fields/Stren__c.field-meta.xml
<CustomField>
    <fullName>Stren__c</fullName>
    <label>Strengths</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>