force-app/main/default/objects/Competitor_Opp__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <label>Weaknesses</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>